added responsive file and changes in css

--- a/task2/index.html
+++ b/task2/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task2</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -16,16 +17,17 @@
             <div class="firstChild-box2">
                 <div class="child-child"></div>
             </div>
+            <div class="firstChild-box3"></div>
         </div>
         <div class="secondChild">
             <div class="secondChild-child">
                 <div class="secondChildBox-parent">
-                    <div class="secondChild-box1"></div>
-                    <div class="secondChild-box1"></div>
+                    <div class="secondChild-box1 secondChild-box"></div>
+                    <div class="secondChild-box1 secondChild-box"></div>
                 </div>
                 <div class="secondChildBox-parent">
-                    <div class="secondChild-box2"></div>
-                    <div class="secondChild-box2"></div>
+                    <div class="secondChild-box2 secondChild-box"></div>
+                    <div class="secondChild-box2 secondChild-box"></div>
                 </div>
             </div>
         </div>
@@ -43,18 +45,29 @@
             <div class="fourthChild-box"></div>
         </div>
         <div class="fifthChild">
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
-            <div class="fifthChild-box"></div>
+
+            <div class="fifthChildBox-parent">
+                <div class="fifthChild-box"></div>
+                <div class="fifthChild-box"></div>
+                <div class="fifthChild-box"></div>
+                <div class="fifthChild-box"></div>
+                <div class="fifthChild-box3"></div>
+                <div class="fifthChild-box3"></div>
+                <div class="fifthChild-box3"></div>
+                <div class="fifthChild-box3"></div>
+            </div>
+            <div class="fifthChildBox-parent">
+                <div class="fifthChild-box fifthChild-box1"></div>
+                <div class="fifthChild-box fifthChild-box1"></div>
+                <div class="fifthChild-box fifthChild-box1"></div>
+                <div class="fifthChild-box fifthChild-box2"></div>
+                <div class="fifthChild-box2"></div>
+                <div class="fifthChild-box2"></div>
+                <div class="fifthChild-box2"></div>
+
+            </div>
+
+
 
         </div>
 
