Added new Js gwt All employee details

--- a/employeeDetails/allDetails.html
+++ b/employeeDetails/allDetails.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/allDetails.js"></script>
 </head>
 
-<body>
+<body onload="getAllEmployees()">
     <div class="container">
         <div class="table-container">
-            <table>
+            <table id="list-table">
                 <tr>
                     <th>Name</th>
                     <th>Address</th>
