Adding js file all detail

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -4,26 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do-List</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/myScript.js"></script>
+
+    <title>Document</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="addListContainer">
-            <h3>Create To-Do List</h3>
-            <input type="text" id="list" placeholder="Enter Text here!">
-            <button id="button">ADD</button>
-
+        <div class="nav-container" id="nav-container">
+            <p id="home">Home</p>
         </div>
-        <div class="addList" id="addList">
-
-        </div>
-
+        <div class="dropdown-list" id="dropdown-list"></div>
     </div>
-
 
 </body>
 
